syntax = "proto3";

option go_package = "/message";

package message;

// The service definition.
service Handler {
  rpc HandleMessage (MessageRequest) returns (MessageReply) {}
}

// The request message.
message MessageRequest {
  string name = 1;
}

// The response message.
message MessageReply {
  string message = 1;
}
